--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -17,7 +17,8 @@
             android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="parent" />
+            app:layout_constraintTop_toBottomOf="parent"
+            android:layout_margin="5dp"/>
 
         <TextView
             android:id="@+id/origin_label"
@@ -25,17 +26,25 @@
             android:layout_height="wrap_content"
             android:text="@string/detail_place_of_origin_label"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@id/image_iv"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/image_iv"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
             />
 
         <TextView
             android:id="@+id/origin_tv"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="40dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="5dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/origin_label"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/origin_label"
-            tools:text="Origin ..."/>
+            tools:text="Origin ..."
+            android:scrollHorizontally="false"/>
 
         <TextView
             android:id="@+id/also_known_label"
@@ -43,16 +52,20 @@
             android:layout_height="wrap_content"
             android:text="@string/detail_also_known_as_label"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@id/image_iv"
-            app:layout_constraintTop_toBottomOf="@id/origin_label" />
+            app:layout_constraintStart_toStartOf="@id/origin_label"
+            app:layout_constraintTop_toBottomOf="@id/origin_tv"
+             />
 
         <TextView
             android:id="@+id/also_known_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/also_known_label"
-            tools:text="Also known as ...." />
+            android:layout_width="0dp"
+            android:layout_height="20dp"
+            app:layout_constraintStart_toStartOf="@id/origin_tv"
+            app:layout_constraintTop_toBottomOf="@id/also_known_label"
+            tools:text="Also known as ...."
+            android:layout_marginTop="5dp"
+            android:scrollHorizontally="false"
+            />
 
         <TextView
             android:id="@+id/ingredients_label"
@@ -60,16 +73,21 @@
             android:layout_height="wrap_content"
             android:text="@string/detail_ingredients_label"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@id/image_iv"
-            app:layout_constraintTop_toBottomOf="@id/also_known_label" />
+            app:layout_constraintStart_toStartOf="@id/origin_label"
+            app:layout_constraintTop_toBottomOf="@id/also_known_tv"
+            android:layout_marginTop="5dp"
+            />
 
         <TextView
             android:id="@+id/ingredients_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/ingredients_label"
-            tools:text="Ingredients ...." />
+            android:layout_width="0dp"
+            android:layout_height="20dp"
+            app:layout_constraintStart_toStartOf="@id/origin_tv"
+            app:layout_constraintTop_toBottomOf="@id/ingredients_label"
+            tools:text="Ingredients ...."
+            android:layout_marginTop="5dp"
+            android:scrollHorizontally="false"
+            />
 
         <TextView
             android:id="@+id/description_label"
@@ -77,16 +95,24 @@
             android:layout_height="wrap_content"
             android:text="@string/detail_description_label"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@id/image_iv"
-            app:layout_constraintTop_toBottomOf="@id/ingredients_label" />
+            app:layout_constraintStart_toStartOf="@id/origin_label"
+            app:layout_constraintTop_toBottomOf="@id/ingredients_tv"
+            android:layout_marginTop="5dp"
+            />
 
         <TextView
             android:id="@+id/description_tv"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="@id/origin_tv"
+            app:layout_constraintTop_toBottomOf="@id/description_label"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/description_label"
-            tools:text="Description ...." />
+            tools:text="Description ...."
+            android:layout_marginTop="5dp"
+            android:scrollHorizontally="false"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
+            />
 
 
     </android.support.constraint.ConstraintLayout>
