--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -3,10 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="com.udacity.sandwichclub.DetailActivity">
+
 
         <ImageView
             android:id="@+id/image_iv"
@@ -59,13 +63,12 @@
         <TextView
             android:id="@+id/also_known_tv"
             android:layout_width="0dp"
-            android:layout_height="20dp"
-            app:layout_constraintStart_toStartOf="@id/origin_tv"
-            app:layout_constraintTop_toBottomOf="@id/also_known_label"
-            tools:text="Also known as ...."
+            android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:scrollHorizontally="false"
-            />
+            app:layout_constraintStart_toStartOf="@id/origin_tv"
+            app:layout_constraintTop_toBottomOf="@id/also_known_label"
+            tools:text="Also known as ...." />
 
         <TextView
             android:id="@+id/ingredients_label"
@@ -81,13 +84,12 @@
         <TextView
             android:id="@+id/ingredients_tv"
             android:layout_width="0dp"
-            android:layout_height="20dp"
-            app:layout_constraintStart_toStartOf="@id/origin_tv"
-            app:layout_constraintTop_toBottomOf="@id/ingredients_label"
-            tools:text="Ingredients ...."
+            android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:scrollHorizontally="false"
-            />
+            app:layout_constraintStart_toStartOf="@id/origin_tv"
+            app:layout_constraintTop_toBottomOf="@id/ingredients_label"
+            tools:text="Ingredients ...." />
 
         <TextView
             android:id="@+id/description_label"
@@ -113,7 +115,7 @@
             android:layout_marginEnd="10dp"
             android:layout_marginRight="10dp"
             />
-
-
     </android.support.constraint.ConstraintLayout>
+
+    </ScrollView>
 </layout>
