--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,121 +1,128 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="com.udacity.sandwichclub.DetailActivity">
 
-
-        <ImageView
-            android:id="@+id/image_iv"
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:adjustViewBounds="true"
-            android:contentDescription="@string/sandwich_picture_content_description"
-            android:scaleType="centerCrop"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_height="wrap_content"
+            tools:context="com.udacity.sandwichclub.DetailActivity">
+
+
+            <ImageView
+                android:id="@+id/image_iv"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:adjustViewBounds="true"
+                android:contentDescription="@string/sandwich_picture_content_description"
+                android:scaleType="centerCrop"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="parent"
             android:layout_margin="5dp"/>
 
-        <TextView
-            android:id="@+id/origin_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/detail_place_of_origin_label"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/image_iv"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="5dp"
-            />
+            <TextView
+                android:id="@+id/origin_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="@string/detail_place_of_origin_label"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="@id/guideline_label"
+                app:layout_constraintTop_toBottomOf="@id/image_iv" />
 
-        <TextView
-            android:id="@+id/origin_tv"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
-            android:layout_marginLeft="40dp"
-            android:layout_marginTop="5dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/origin_label"
-            app:layout_constraintEnd_toEndOf="parent"
-            tools:text="Origin ..."
-            android:scrollHorizontally="false"/>
+            <TextView
+                android:id="@+id/origin_tv"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
 
-        <TextView
-            android:id="@+id/also_known_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/detail_also_known_as_label"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@id/origin_label"
-            app:layout_constraintTop_toBottomOf="@id/origin_tv"
-             />
+                android:layout_marginTop="5dp"
+                android:scrollHorizontally="false"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@id/guideline_content"
+                app:layout_constraintTop_toBottomOf="@+id/origin_label"
+                tools:text="Origin ..." />
 
-        <TextView
-            android:id="@+id/also_known_tv"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:scrollHorizontally="false"
-            app:layout_constraintStart_toStartOf="@id/origin_tv"
-            app:layout_constraintTop_toBottomOf="@id/also_known_label"
-            tools:text="Also known as ...." />
+            <TextView
+                android:id="@+id/also_known_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/detail_also_known_as_label"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="@id/guideline_label"
+                app:layout_constraintTop_toBottomOf="@id/origin_tv" />
 
-        <TextView
-            android:id="@+id/ingredients_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/detail_ingredients_label"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@id/origin_label"
-            app:layout_constraintTop_toBottomOf="@id/also_known_tv"
-            android:layout_marginTop="5dp"
-            />
+            <TextView
+                android:id="@+id/also_known_tv"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:scrollHorizontally="false"
+                app:layout_constraintStart_toStartOf="@id/guideline_content"
+                app:layout_constraintTop_toBottomOf="@id/also_known_label"
+                tools:text="Also known as ...." />
 
-        <TextView
-            android:id="@+id/ingredients_tv"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:scrollHorizontally="false"
-            app:layout_constraintStart_toStartOf="@id/origin_tv"
-            app:layout_constraintTop_toBottomOf="@id/ingredients_label"
-            tools:text="Ingredients ...." />
+            <TextView
+                android:id="@+id/ingredients_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="@string/detail_ingredients_label"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="@id/guideline_label"
+                app:layout_constraintTop_toBottomOf="@id/also_known_tv" />
 
-        <TextView
-            android:id="@+id/description_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/detail_description_label"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@id/origin_label"
-            app:layout_constraintTop_toBottomOf="@id/ingredients_tv"
-            android:layout_marginTop="5dp"
-            />
+            <TextView
+                android:id="@+id/ingredients_tv"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:scrollHorizontally="false"
+                app:layout_constraintStart_toStartOf="@id/guideline_content"
+                app:layout_constraintTop_toBottomOf="@id/ingredients_label"
+                tools:text="Ingredients ...." />
 
-        <TextView
-            android:id="@+id/description_tv"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@id/origin_tv"
-            app:layout_constraintTop_toBottomOf="@id/description_label"
-            app:layout_constraintEnd_toEndOf="parent"
-            tools:text="Description ...."
-            android:layout_marginTop="5dp"
-            android:scrollHorizontally="false"
-            android:layout_marginEnd="10dp"
-            android:layout_marginRight="10dp"
-            />
-    </android.support.constraint.ConstraintLayout>
+            <TextView
+                android:id="@+id/description_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="@string/detail_description_label"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="@id/guideline_label"
+                app:layout_constraintTop_toBottomOf="@id/ingredients_tv" />
+
+            <TextView
+                android:id="@+id/description_tv"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="5dp"
+                android:scrollHorizontally="false"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@id/guideline_content"
+                app:layout_constraintTop_toBottomOf="@id/description_label"
+                tools:text="Description ...." />
+
+            <android.support.constraint.Guideline
+                android:id="@+id/guideline_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_begin="16dp" />
+
+            <android.support.constraint.Guideline
+                android:id="@+id/guideline_content"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_begin="40dp" />
+        </android.support.constraint.ConstraintLayout>
 
     </ScrollView>
 </layout>
