--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -12,7 +12,6 @@
             android:layout_height="wrap_content"
             tools:context="com.udacity.sandwichclub.DetailActivity">
 
-
             <ImageView
                 android:id="@+id/image_iv"
                 android:layout_width="match_parent"
@@ -22,8 +21,8 @@
                 android:scaleType="centerCrop"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="parent"
-            android:layout_margin="5dp"/>
+                android:layout_margin="5dp"
+                app:layout_constraintTop_toBottomOf="parent" />
 
             <TextView
                 android:id="@+id/origin_label"
