--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -39,6 +39,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
 
+                android:layout_marginEnd="16dp"
                 android:layout_marginTop="5dp"
                 android:scrollHorizontally="false"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -59,8 +60,10 @@
                 android:id="@+id/also_known_tv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
                 android:layout_marginTop="5dp"
                 android:scrollHorizontally="false"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@id/guideline_content"
                 app:layout_constraintTop_toBottomOf="@id/also_known_label"
                 tools:text="Also known as ...." />
@@ -79,8 +82,11 @@
                 android:id="@+id/ingredients_tv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
                 android:layout_marginTop="5dp"
                 android:scrollHorizontally="false"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@id/guideline_content"
                 app:layout_constraintTop_toBottomOf="@id/ingredients_label"
                 tools:text="Ingredients ...." />
@@ -99,8 +105,8 @@
                 android:id="@+id/description_tv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="10dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
                 android:layout_marginTop="5dp"
                 android:paddingBottom="16dp"
                 android:scrollHorizontally="false"
