--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -40,6 +40,7 @@
                 android:layout_height="wrap_content"
 
                 android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
                 android:layout_marginTop="5dp"
                 android:scrollHorizontally="false"
                 app:layout_constraintEnd_toEndOf="parent"
